# possumbets

./: ARCHITECTURE.md  CLAUDE.md  docker-compose.e2e.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: pr.yml
e2e/: compose.ts  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: happy-path.spec.ts
frontend/: .env.example  CLAUDE.md  next.config.ts
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/runtime-config.js/: route.ts
frontend/src/components/: BetSlip.tsx  Navbar.tsx  OddsBoard.tsx
frontend/src/lib/: api.ts  config.ts  keycloak.ts  websocket.ts
keycloak/: Dockerfile  realm.e2e.json
services/core/: jest.config.js  package.json
services/core/src/: app.module.ts
services/core/src/admin/: admin.controller.spec.ts
services/core/src/bets/: bets.service.spec.ts  bets.service.ts
services/core/src/messaging/: messaging.service.ts
services/core/src/notifications/: notifications.client.ts  notifications.module.ts
services/core/src/odds/: odds.service.ts
services/core/src/wallet/: tigerbeetle-global-setup.ts  tigerbeetle-harness.ts  wallet.service.spec.ts  wallet.service.ts
services/notifications/: package.json  pyproject.toml
services/notifications/src/: app.py  subscriber.py
services/odds/: package.json  pyproject.toml
services/odds/src/: app.py  publisher.py
