[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "odds-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "flask==3.1.3",
  "gunicorn==25.3.0",
  "aiohttp==3.13.5",
  "redis[hiredis]==7.4.0",
  "protobuf==6.33.6",
  "pydantic==2.13.3",
  "pydantic-core==2.46.3",
  "pex==2.93.4",
  "grpcio-tools==1.80.0",
]

[project.optional-dependencies]
dev = ["mypy", "mypy-protobuf"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
