[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "odds-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.121.2",
  "uvicorn[standard]==0.40.0",
  "aiohttp==3.13.5",
  "asyncpg==0.30.0",
  "aio-pika==9.5.5",
  "protobuf==6.33.6",
  "pydantic==2.13.3",
  "pydantic-core==2.46.3",
  "pex==2.93.4",
  "grpcio-tools==1.80.0",
]

[project.optional-dependencies]
dev = ["pyright", "mypy-protobuf"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
strict = ["src"]
exclude = ["src/generated"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
